# PatchDoctor

./: .gitignore  .pylintrc  README.md  architecture.md  opencode-tools.json  patchdoctor.py  pyproject.toml
examples/: README.md  basic_validation_workflow.py  batch_patch_processing.py  ci_integration_example.py  iterative_patch_refinement.py
tests/: test_patchdoctor.py
